[gd_scene load_steps=5 format=3 uid="uid://cswpmrvohkcwh"]

[ext_resource type="FontFile" uid="uid://we4i6ca8lirq" path="res://Tvcd-d92gK.ttf" id="1_f3536"]
[ext_resource type="Texture2D" uid="uid://b3c80qymwiecv" path="res://edit-icon-1022x1024-kes437mc.png" id="2_6mfl6"]
[ext_resource type="Script" path="res://task.gd" id="2_pishl"]
[ext_resource type="Texture2D" uid="uid://dqsf4kmy8wt34" path="res://trash-2-xxl.png" id="4_dwxlp"]

[node name="task" type="CheckBox"]
texture_filter = 1
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_f3536")
theme_override_font_sizes/font_size = 46
text = "Example Task"
expand_icon = true
script = ExtResource("2_pishl")

[node name="edit" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1027.0
offset_top = 9.0
offset_right = 1067.0
offset_bottom = 49.0
texture_normal = ExtResource("2_6mfl6")
texture_pressed = ExtResource("2_6mfl6")
texture_hover = ExtResource("2_6mfl6")
texture_disabled = ExtResource("2_6mfl6")
texture_focused = ExtResource("2_6mfl6")
ignore_texture_size = true
stretch_mode = 0

[node name="delete" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 957.0
offset_top = 9.0
offset_right = 998.0
offset_bottom = 50.0
texture_normal = ExtResource("4_dwxlp")
texture_pressed = ExtResource("4_dwxlp")
texture_hover = ExtResource("4_dwxlp")
texture_disabled = ExtResource("4_dwxlp")
texture_focused = ExtResource("4_dwxlp")
ignore_texture_size = true
stretch_mode = 0

[node name="LineEdit" type="LineEdit" parent="."]
visible = false
layout_mode = 0
offset_right = 1080.0
offset_bottom = 57.0
theme_override_fonts/font = ExtResource("1_f3536")
theme_override_font_sizes/font_size = 46
placeholder_text = "Enter Task Name"

[connection signal="pressed" from="edit" to="." method="_on_edit_pressed"]
[connection signal="pressed" from="delete" to="." method="_on_delete_pressed"]
[connection signal="text_submitted" from="LineEdit" to="." method="_on_line_edit_text_submitted"]
